Fix logo vertical alignment on old iPads

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -147,6 +147,7 @@ a:hover {
 
 #logo {
   font-size: 22px;
+  line-height: 18px;
   font-weight: normal;
   text-transform: uppercase;
   vertical-align: middle;
